--- a/pigudfs/udfs/pom.xml
+++ b/pigudfs/udfs/pom.xml
@@ -33,5 +33,35 @@
 			<version>0.20.203.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>2.4.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>13.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>hadoop-lzo</groupId>
+			<artifactId>hadoop-lzo</artifactId>
+			<version>0.4.15</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>clojars.org</id>
+			<url>http://clojars.org/repo</url>
+		</repository>
+	</repositories>
 </project>
