--- a/pigudfs/udfs/pom.xml
+++ b/pigudfs/udfs/pom.xml
@@ -106,6 +106,12 @@
 			<version>4.2.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>4.2.0</version>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
