--- a/pigudfs/udfs/pom.xml
+++ b/pigudfs/udfs/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.nts.pigutils</groupId>
 	<artifactId>udfs</artifactId>
-	<version>0.4.1</version>
+	<version>0.5.0</version>
 	<packaging>jar</packaging>
 
 	<name>udfs</name>
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>org.apache.pig</groupId>
 			<artifactId>pig</artifactId>
-			<version>0.10.0</version>
+			<version>0.12.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -46,6 +46,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-core-asl</artifactId>
 			<version>1.9.12</version>
@@ -65,8 +70,8 @@
 
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
-			<version>0.20.203.0</version>
+			<artifactId>hadoop-client</artifactId>
+			<version>2.2.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
